Add try catch to all controllers for contacts, Update cors to work with front end, Lint and Format
